<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="@dimen/margin"
        android:paddingRight="@dimen/margin"
        tools:context="com.hardfreedom.coffee.MainActivity">

        <EditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            android:inputType="textMultiLine"
            android:importantForAutofill="no" tools:targetApi="o" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin"
            android:text="@string/column_checkbox"
            android:textAllCaps="true" />

        <CheckBox
            android:id="@+id/check_whipped"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/whipped"
            android:textSize="@dimen/text_size"
            android:layout_marginStart="@dimen/margin"
            android:paddingLeft="@dimen/padding"
            android:paddingRight="@dimen/padding" />

        <CheckBox
            android:id="@+id/check_chocolate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chocolate"
            android:textSize="@dimen/text_size"
            android:layout_marginStart="@dimen/margin"
            android:paddingLeft="@dimen/padding"
            android:paddingRight="@dimen/padding"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin"
            android:text="@string/column_quantity"
            android:textAllCaps="true" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:layout_width="@dimen/square_button"
                android:layout_height="@dimen/square_button"
                android:layout_margin="@dimen/margin"
                android:onClick="decrement"
                android:text="@string/minus" />

            <TextView
                android:id="@+id/quantity_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin"
                android:text="@integer/quantity_value"
                android:textSize="@dimen/text_size" />

            <Button
                android:layout_width="@dimen/square_button"
                android:layout_height="@dimen/square_button"
                android:layout_margin="@dimen/margin"
                android:onClick="increment"
                android:text="@string/plus" />

        </LinearLayout>


        <TextView
            android:id="@+id/order_summary_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin"
            android:text="@string/column_summary"
            android:textAllCaps="true"
            android:textSize="@dimen/text_size"
            android:visibility="gone" />

        <TextView
            android:id="@+id/order_summary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin"
            android:text=""
            android:visibility="gone" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin"
            android:onClick="orderSummaryTextView"
            android:text="@string/button"
            android:textAllCaps="true" />
    </LinearLayout>
</ScrollView>